# lambda-buffers

./: .envrc  .ghci  .gitignore  .markdownlint.yaml  .replit  404.html  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  _typos.toml  aiken-integration.html  api.html  catalyst-reports.html  codegen.html  command-line-interface.html  common.nix  comparison-matrix.html  compiler-api.html  compiler.html  design.html  flake.nix  getting-started.html  haskell.html  hercules-ci.nix  index.html  introduction.html  pkgs.nix  plutarch.html  plutustx.html  pre-commit-check.nix  pre-commit.nix  print.html  purescript.html  replit.nix  rust.html  searchindex.js  searchindex.json  settings.nix  syntax.html  (+4 more)
docs/plutarch/: .envrc  build.nix  plutarch-example.cabal
docs/plutarch/api/: Example.lbf
docs/plutarch/app/: Example.hs
docs/plutustx/: build.nix  plutustx-example.cabal
docs/plutustx/api/: Example.lbf
docs/plutustx/app/: Main.hs
experimental/plutustx-env/: .envrc  Makefile  build.nix  lbf-base  plutustx-env.cabal
experimental/plutustx-env/api/: Citizen.lbf  Coop.lbf
experimental/plutustx-env/autogen/LambdaBuffers/: Citizen.hs  Plutus.hs  Prelude.hs
experimental/type-checker/: CHANGELOG.md  LICENSE  lambdaBuffers-type-checker.cabal
experimental/type-checker/src/: KindChecker.hs  TC.hs
extras/dev-shells/plutus-haskell/: .envrc  build.nix  plutus-haskell.cabal
extras/dev-shells/prelude-haskell/: .envrc  build.nix  prelude-haskell.cabal
extras/lambda-buffers-utils/: .envrc  build.nix  cabal.project  lambda-buffers-utils.cabal
extras/lambda-buffers-utils/test/: Test.hs
lambda-buffers-codegen/: .envrc  build.nix  cabal.project  lambda-buffers-codegen.cabal  nix-tarballs
lambda-buffers-codegen/app/: Main.hs
lambda-buffers-codegen/data/: haskell-plutus-plutustx.json  haskell-prelude-base.json  haskell-prelude-plutustx.json  haskell.json  plutarch-plutus.json  plutarch-prelude.json  plutustx-plutus.json  plutustx-prelude.json  purescript-plutus-ctl.json  purescript-prelude-base.json  purescript.json  rust-plutus-pla.json  rust-prelude-base.json  typescript-plutus.json  typescript-prelude-base.json
lambda-buffers-codegen/data/goldens/: lambda-buffers.input.textproto  run.sh
lambda-buffers-codegen/extra-source-files/: haskell.json
lambda-buffers-codegen/src/LambdaBuffers/: CodeGen.hs  Codegen.hs
lambda-buffers-codegen/test/: Test.hs
lambda-buffers-common/: CHANGELOG.md  build.nix  lambda-buffers-common.cabal
lambda-buffers-compiler/: .envrc  build.nix  lambda-buffers-compiler.cabal
lambda-buffers-compiler/app/: Main.hs
lambda-buffers-compiler/data/minilog-goldens/: cycle.pl  eq_typeclass.pl  family.pl  greeks.pl  very_long_arguments.pl  very_long_body.pl
lambda-buffers-compiler/src/LambdaBuffers/: Compiler.hs  Logger.hs  ProtoCompat.hs
lambda-buffers-compiler/src/Orphan/: Text.hs
lambda-buffers-compiler/test/: Test.hs
lambda-buffers-compiler/test/Test/: DeriveCheck.hs  KindCheck.hs  Samples.hs  TypeClassCheck.hs
lambda-buffers-compiler/test/Test/Proto/: Module.hs  (+4 more)
lambda-buffers-compiler/typeclass-experiments/: README.md  typeclass-experiments.cabal.backup
lambda-buffers-extras/: .envrc  build.nix  lambda-buffers-extras.cabal
lambda-buffers-frontend/: .envrc  Test.lbf  build.nix  cabal.project  lambda-buffers-frontend.cabal
lambda-buffers-frontend/app/: Main.hs
lambda-buffers-frontend/data/: run.sh
lambda-buffers-frontend/data/good/: Test.lbf
lambda-buffers-frontend/data/good_instance/: GoodInstance.lbf
lambda-buffers-frontend/data/good_module_documentation/: ModuleDocumentation.lbf
lambda-buffers-frontend/data/import_cycle_found/: B.lbf
lambda-buffers-frontend/data/symbol_already_imported/: A.lbf
lambda-buffers-frontend/data/tydef_name_conflict/: A.lbf
lambda-buffers-frontend/extra-source-files/good/: A.lbf
lambda-buffers-frontend/extra-source-files/import_cycle_found/: A.lbf
lambda-buffers-frontend/extra-source-files/invalid_module_filepath/: A.lbf
lambda-buffers-frontend/extra-source-files/symbol_already_imported/: C.lbf
lambda-buffers-frontend/extra-source-files/tyref_not_found/: B.lbf
lambda-buffers-frontend/resources/: A.lbf  B.lbf  C.lbf  D.lbf  E.lbf  F.lbf  run.sh
lambda-buffers-frontend/resources/G/: A.lbf  B.lbf
lambda-buffers-frontend/resources/duplicate_tydef/: A.lbf
lambda-buffers-frontend/resources/formatting/: A.lbf  BadFormat.lbf
lambda-buffers-frontend/resources/good/: B.lbf  Test.lbf
lambda-buffers-frontend/resources/import_cycle_found/: C.lbf
lambda-buffers-frontend/resources/imported_not_found/: A.lbf  B.lbf
lambda-buffers-frontend/resources/module_parse_error/: A.lbf
lambda-buffers-frontend/resources/multiple_modules_found/: B.lbf
lambda-buffers-frontend/resources/tyref_not_found/: A.lbf  C.lbf
lambda-buffers-frontend/src/LambdaBuffers/: Frontend.hs
lambda-buffers-frontend/test/: Test.hs
lambda-buffers-proto-compat/: .envrc  build.nix  lambda-buffers-proto-compat.cabal
lambda-buffers-testsuite/lbt-prelude/haskell-golden/: .envrc  build.nix  haskell-golden.cabal
runtimes/haskell/lbr-json-plutus/: .envrc  build.nix  lbr-json-plutus.cabal
runtimes/haskell/lbr-plutarch/: .envrc  build.nix  cabal.project  lbr-plutarch.cabal
runtimes/haskell/lbr-plutus/: .envrc  build.nix  lbr-plutus.cabal
runtimes/haskell/lbr-plutustx/: .envrc  build.nix  lbr-plutustx.cabal
runtimes/haskell/lbr-prelude/: .envrc  build.nix  lbr-prelude.cabal
runtimes/rust/lbr-plutus-csl/: .envrc  Cargo.toml  build.nix
runtimes/rust/lbr-prelude/: .envrc  Cargo.toml  build.nix  crates.nix
runtimes/rust/lbr-prelude-derive/: .envrc  .gitignore  Cargo.toml  build.nix  lib.rs
runtimes/rust/plutus-ledger-types/: .envrc  .gitignore  Cargo.toml  build.nix
testsuites/lbt-plutus/lbt-plutus-haskell/: .envrc  build.nix  lbt-plutus-haskell.cabal
testsuites/lbt-plutus/lbt-plutus-plutarch/: .envrc  build.nix  lbt-plutus-plutarch.cabal
testsuites/lbt-plutus/lbt-plutus-plutustx/: .envrc  build.nix  lbt-plutus-plutustx.cabal
testsuites/lbt-plutus/lbt-plutus-rust/: .envrc  Cargo.toml  build.nix
(+1592 files in other folders)
