cabal-version: 3.0
name:          lambda-buffers-codegen
version:       0.1.0.0
synopsis:      Lambda Buffers Codegen

-- license:

author:        MLabs LTD
maintainer:    info@mlabs.city

-- A copyright notice.
-- copyright:
-- category:

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , aeson
    , base                        >=4.16
    , containers                  >=0.6
    , data-default                >=0.7
    , lambda-buffers-compiler     >=0.1
    , lambda-buffers-compiler-pb  >=0.1
    , lens                        >=5.2
    , mtl                         >=2.2
    , ordered-containers          >=0.2
    , prettyprinter               >=1.7
    , proto-lens                  >=0.7
    , text                        >=1.2

  hs-source-dirs:  src
  exposed-modules:
    LambdaBuffers.Codegen
    LambdaBuffers.Codegen.Haskell
    LambdaBuffers.Codegen.Haskell.Config
    LambdaBuffers.Codegen.Haskell.Print
    LambdaBuffers.Codegen.Haskell.PrintM
    LambdaBuffers.Codegen.Haskell.Syntax

executable lbg
  import:         common-language
  build-depends:
    , aeson
    , base                        >=4.16
    , bytestring                  >=0.11
    , containers
    , lambda-buffers-codegen
    , lambda-buffers-compiler     >=0.1
    , lambda-buffers-compiler-pb  >=0.1
    , lens                        >=5.2
    , optparse-applicative        >=0.17
    , proto-lens                  >=0.7
    , text                        >=1.2

  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    LambdaBuffers.Codegen.Cli.Gen
    LambdaBuffers.Codegen.Cli.GenHaskell

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , base                        >=4.16
    , containers                  >=0.6
    , data-default                >=0.7
    , lambda-buffers-codegen
    , lambda-buffers-compiler     >=0.1
    , lambda-buffers-compiler-pb  >=0.1
    , lens                        >=5.2
    , prettyprinter               >=1.7
    , proto-lens                  >=0.7
    , tasty                       >=1.4
    , tasty-hunit                 >=0.10
    , text                        >=1.2

  other-modules:
    Test.LambdaBuffers.Codegen
    Test.LambdaBuffers.Codegen.Haskell
