cabal-version:      3.0
name:               lambda-buffers-codegen
version:            0.1.0.0
synopsis:           Lambda Buffers Codegen
author:             MLabs LTD
maintainer:         info@mlabs.city
data-files:
  data/**/*.json
  data/lamval-cases/**/*.hs

extra-source-files:
  data/**/*.json
  data/lamval-cases/**/*.hs

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-missed-specialisations
    -Wno-all-missed-specialisations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , aeson
    , base                       >=4.16
    , containers
    , data-default
    , lambda-buffers-codegen-pb
    , lambda-buffers-compiler
    , lens
    , mtl
    , ordered-containers
    , prettyprinter
    , proto-lens
    , text
    , vector

  hs-source-dirs:  src
  exposed-modules:
    LambdaBuffers.Codegen
    LambdaBuffers.Codegen.Check
    LambdaBuffers.Codegen.Config
    LambdaBuffers.Codegen.Haskell
    LambdaBuffers.Codegen.Haskell.Config
    LambdaBuffers.Codegen.Haskell.Print
    LambdaBuffers.Codegen.Haskell.Print.Derive
    LambdaBuffers.Codegen.Haskell.Print.InstanceDef
    LambdaBuffers.Codegen.Haskell.Print.LamVal
    LambdaBuffers.Codegen.Haskell.Print.MonadPrint
    LambdaBuffers.Codegen.Haskell.Print.Syntax
    LambdaBuffers.Codegen.Haskell.Print.TyDef
    LambdaBuffers.Codegen.LamVal
    LambdaBuffers.Codegen.LamVal.Derive
    LambdaBuffers.Codegen.LamVal.Eq
    LambdaBuffers.Codegen.LamVal.Json
    LambdaBuffers.Codegen.LamVal.MonadPrint
    LambdaBuffers.Codegen.LamVal.PlutusData
    LambdaBuffers.Codegen.Plutarch
    LambdaBuffers.Codegen.Plutarch.Print
    LambdaBuffers.Codegen.Plutarch.Print.Derive
    LambdaBuffers.Codegen.Plutarch.Print.LamVal
    LambdaBuffers.Codegen.Plutarch.Print.Refs
    LambdaBuffers.Codegen.Plutarch.Print.Syntax
    LambdaBuffers.Codegen.Plutarch.Print.TyDef
    LambdaBuffers.Codegen.Print
    LambdaBuffers.Codegen.Purescript
    LambdaBuffers.Codegen.Purescript.Config
    LambdaBuffers.Codegen.Purescript.Print
    LambdaBuffers.Codegen.Purescript.Print.Derive
    LambdaBuffers.Codegen.Purescript.Print.InstanceDef
    LambdaBuffers.Codegen.Purescript.Print.LamVal
    LambdaBuffers.Codegen.Purescript.Print.MonadPrint
    LambdaBuffers.Codegen.Purescript.Print.Names
    LambdaBuffers.Codegen.Purescript.Print.Ty
    LambdaBuffers.Codegen.Purescript.Print.TyDef
    LambdaBuffers.Codegen.Purescript.Syntax
    LambdaBuffers.Codegen.Rust
    LambdaBuffers.Codegen.Rust.Config
    LambdaBuffers.Codegen.Rust.Print
    LambdaBuffers.Codegen.Rust.Print.Derive
    LambdaBuffers.Codegen.Rust.Print.InstanceDef
    LambdaBuffers.Codegen.Rust.Print.LamVal
    LambdaBuffers.Codegen.Rust.Print.MonadPrint
    LambdaBuffers.Codegen.Rust.Print.Refs
    LambdaBuffers.Codegen.Rust.Print.Syntax
    LambdaBuffers.Codegen.Rust.Print.TyDef

executable lbg
  import:          common-language
  build-depends:
    , aeson
    , base                       >=4.16
    , bytestring
    , containers
    , directory
    , filepath
    , lambda-buffers-codegen
    , lambda-buffers-codegen-pb
    , lambda-buffers-compiler
    , lens
    , optparse-applicative
    , proto-lens
    , text

  hs-source-dirs:  app
  main-is:         Main.hs
  other-modules:
    LambdaBuffers.Codegen.Cli.Gen
    LambdaBuffers.Codegen.Cli.GenHaskell
    LambdaBuffers.Codegen.Cli.GenPlutarch
    LambdaBuffers.Codegen.Cli.GenPurescript
    LambdaBuffers.Codegen.Cli.GenRust
    Paths_lambda_buffers_codegen

  autogen-modules: Paths_lambda_buffers_codegen

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , aeson
    , base                       >=4.16
    , containers
    , data-default
    , lambda-buffers-codegen
    , lambda-buffers-codegen-pb
    , lambda-buffers-compiler
    , lens
    , ordered-containers
    , tasty
    , tasty-hunit
    , text

  other-modules:
    Paths_lambda_buffers_codegen
    Test.LambdaBuffers.Codegen
    Test.LambdaBuffers.Codegen.Haskell
    Test.LambdaBuffers.Codegen.Plutarch
    Test.LambdaBuffers.Codegen.Purescript
    Test.LambdaBuffers.Codegen.Rust
