cabal-version:   3.4
name:            lambda-buffers-common
version:         0.1.0.0
synopsis:        Common resources.
author:          MLabs LTD
maintainer:      info@mlabs.city
build-type:      Simple
extra-doc-files: CHANGELOG.md

common warnings
  ghc-options: -Wall

library
  import:           warnings
  exposed-modules:  LambdaBuffers.Common.ProtoCompat
  build-depends:    base >=4.16
  hs-source-dirs:   src
  default-language: Haskell2010
