cabal-version: 3.0
name:          lambda-buffers-compiler
version:       0.1.0.0
synopsis:      Lambda Buffers compiler

-- license:

author:        MLabs LTD
maintainer:    info@mlabs.city

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-all-missed-specialisations -Wno-missing-kind-signatures

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

common common-imports
  build-depends:
    , base  >=4.16
    , lens  >=5.2

library
  import:          common-language
  import:          common-imports
  build-depends:
    , containers                  >=0.6.5.1
    , data-default                >=0.7
    , freer-simple                >=1.2
    , generic-lens                >=2.2
    , generics-sop                >=0.5
    , lambda-buffers-compiler-pb  >=0.1.0.0
    , mtl                         >=2.2
    , ordered-containers          >=0.2
    , parsec                      >=3.1
    , prettyprinter               >=1.7
    , proto-lens                  >=0.7
    , text                        >=1.2

  exposed-modules:
    LambdaBuffers.Compiler
    LambdaBuffers.Compiler.KindCheck
    LambdaBuffers.Compiler.KindCheck.Derivation
    LambdaBuffers.Compiler.KindCheck.Inference
    LambdaBuffers.Compiler.KindCheck.Kind
    LambdaBuffers.Compiler.KindCheck.Type
    LambdaBuffers.Compiler.NamingCheck
    LambdaBuffers.Compiler.ProtoCompat
    LambdaBuffers.Compiler.ProtoCompat.FromProto
    LambdaBuffers.Compiler.ProtoCompat.InfoLess
    LambdaBuffers.Compiler.ProtoCompat.Types
    LambdaBuffers.Compiler.TypeClassCheck
    LambdaBuffers.Compiler.TypeClassCheck.Compat
    LambdaBuffers.Compiler.TypeClassCheck.Pat
    LambdaBuffers.Compiler.TypeClassCheck.Pretty
    LambdaBuffers.Compiler.TypeClassCheck.Rules
    LambdaBuffers.Compiler.TypeClassCheck.Solve
    LambdaBuffers.Compiler.TypeClassCheck.SuperclassCycleCheck
    LambdaBuffers.Compiler.TypeClassCheck.Utils
    LambdaBuffers.Compiler.TypeClassCheck.Validate

  hs-source-dirs:  src

executable lbc
  import:         common-language
  import:         common-imports
  main-is:        Main.hs
  build-depends:
    , bytestring                  >=0.11
    , lambda-buffers-compiler
    , lambda-buffers-compiler-pb  >=0.1.0.0
    , optparse-applicative        >=0.17
    , proto-lens                  >=0.7
    , text                        >=1.2

  hs-source-dirs: app
  other-modules:  LambdaBuffers.Compiler.Cli.Compile

test-suite tests
  import:         common-language
  import:         common-imports
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , containers                  >=0.6
    , data-default                >=0.7
    , generic-lens                >=2.2
    , hedgehog                    >=1.2
    , lambda-buffers-compiler
    , lambda-buffers-compiler-pb  >=0.1
    , nonempty-containers         >=0.3
    , ordered-containers          >=0.2
    , proto-lens                  >=0.7
    , tasty                       >=1.4
    , tasty-hedgehog              >=1.4
    , tasty-hunit                 >=0.10
    , text                        >=1.2

  other-modules:
    Test.DeriveCheck
    Test.KindCheck
    Test.KindCheck.Errors
    Test.LambdaBuffers.Compiler
    Test.LambdaBuffers.Compiler.Coverage
    Test.LambdaBuffers.Compiler.Mutation
    Test.LambdaBuffers.Compiler.Utils
    Test.LambdaBuffers.Compiler.WellFormed
    Test.TypeClassCheck
    Test.Utils.CompilerInput
    Test.Utils.Constructors
    Test.Utils.Module
    Test.Utils.TyDef
