cabal-version:      3.0
name:               lambda-buffers-compiler
version:            0.1.0.0
synopsis:           Lambda Buffers compiler
data-files:
  data/**/*.pl
  data/**/*.textproto

extra-source-files:
  data/**/*.pl
  data/**/*.textproto

author:             MLabs LTD
maintainer:         info@mlabs.city

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-all-missed-specialisations -Wno-missing-kind-signatures

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , base                        >=4.16
    , containers                  >=0.6.5.1
    , data-default                >=0.7
    , freer-simple                >=1.2
    , generic-lens                >=2.2
    , generics-sop                >=0.5
    , lambda-buffers-compiler-pb  >=0.1.0.0
    , lambda-buffers-lang-pb      >=0.1
    , lens                        >=5.2
    , mtl                         >=2.2
    , ordered-containers          >=0.2
    , parsec                      >=3.1
    , prettyprinter               >=1.7
    , proto-lens                  >=0.7
    , text                        >=1.2
    , unification-fd

  exposed-modules:
    LambdaBuffers.Compiler
    LambdaBuffers.Compiler.KindCheck
    LambdaBuffers.Compiler.KindCheck.Derivation
    LambdaBuffers.Compiler.KindCheck.Inference
    LambdaBuffers.Compiler.KindCheck.Kind
    LambdaBuffers.Compiler.KindCheck.Type
    LambdaBuffers.Compiler.LamTy
    LambdaBuffers.Compiler.LamTy.Eval
    LambdaBuffers.Compiler.LamTy.Pretty
    LambdaBuffers.Compiler.LamTy.Types
    LambdaBuffers.Compiler.MiniLog
    LambdaBuffers.Compiler.MiniLog.Pretty
    LambdaBuffers.Compiler.MiniLog.UniFdSolver
    LambdaBuffers.Compiler.NamingCheck
    LambdaBuffers.Compiler.ProtoCompat
    LambdaBuffers.Compiler.ProtoCompat.FromProto
    LambdaBuffers.Compiler.ProtoCompat.Indexing
    LambdaBuffers.Compiler.ProtoCompat.InfoLess
    LambdaBuffers.Compiler.ProtoCompat.Types
    LambdaBuffers.Compiler.ProtoCompat.Utils
    LambdaBuffers.Compiler.TypeClassCheck
    LambdaBuffers.Compiler.TypeClassCheck.Errors
    LambdaBuffers.Compiler.TypeClassCheck.MiniLog
    LambdaBuffers.Compiler.TypeClassCheck.RuleSet
    LambdaBuffers.Compiler.TypeClassCheck.SuperclassCycleCheck

  hs-source-dirs:  src

executable lbc
  import:         common-language
  main-is:        Main.hs
  build-depends:
    , base                        >=4.16
    , bytestring                  >=0.11
    , lambda-buffers-compiler
    , lambda-buffers-compiler-pb  >=0.1.0.0
    , lens                        >=5.2
    , optparse-applicative        >=0.17
    , proto-lens                  >=0.7
    , text                        >=1.2

  hs-source-dirs: app
  other-modules:  LambdaBuffers.Compiler.Cli.Compile

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , base                        >=4.16
    , containers                  >=0.6
    , data-default                >=0.7
    , filepath                    >=1.4
    , hedgehog                    >=1.2
    , lambda-buffers-compiler
    , lambda-buffers-compiler-pb  >=0.1
    , lambda-buffers-lang-pb      >=0.1
    , lens                        >=5.2
    , nonempty-containers         >=0.3
    , ordered-containers          >=0.2
    , proto-lens                  >=0.7
    , tasty                       >=1.4
    , tasty-hedgehog              >=1.4
    , tasty-hunit                 >=0.10
    , text                        >=1.2

  other-modules:
    Paths_lambda_buffers_compiler
    Test.DeriveCheck
    Test.KindCheck
    Test.KindCheck.Errors
    Test.LambdaBuffers.Compiler
    Test.LambdaBuffers.Compiler.Coverage
    Test.LambdaBuffers.Compiler.MiniLog
    Test.LambdaBuffers.Compiler.Mutation
    Test.LambdaBuffers.Compiler.ProtoCompat.Eval
    Test.LambdaBuffers.Compiler.ProtoCompat.Utils
    Test.LambdaBuffers.Compiler.TypeClassCheck
    Test.LambdaBuffers.Compiler.Utils
    Test.LambdaBuffers.Compiler.Utils.Golden
    Test.LambdaBuffers.Compiler.WellFormed
    Test.Utils.CompilerInput
    Test.Utils.Constructors
    Test.Utils.Module
    Test.Utils.TyDef
