cabal-version:      3.0
name:               lambda-buffers-compiler
version:            0.1.0.0
synopsis:           Lambda Buffers compiler
data-files:
  data/**/*.pl
  data/**/*.textproto

extra-source-files:
  data/**/*.pl
  data/**/*.textproto

author:             MLabs LTD
maintainer:         info@mlabs.city

flag dev
  description: Enable non-strict compilation for development
  manual:      True

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missed-specialisations -Wno-all-missed-specialisations
    -Wno-missing-kind-signatures

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DerivingVia
    DoAndIfThenElse
    DuplicateRecordFields
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    GeneralizedNewtypeDeriving
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NoStarIsType
    NumericUnderscores
    OverloadedLabels
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RecordWildCards
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , base                        >=4.16
    , containers
    , data-default
    , freer-simple                >=1.2.1.2
    , generic-lens
    , generics-sop
    , lambda-buffers-codegen-pb
    , lambda-buffers-compiler-pb
    , lambda-buffers-lang-pb
    , lens
    , mtl
    , ordered-containers
    , parsec
    , prettyprinter
    , proto-lens
    , text
    , unification-fd

  exposed-modules:
    LambdaBuffers.Compiler
    LambdaBuffers.Compiler.KindCheck
    LambdaBuffers.Compiler.KindCheck.Derivation
    LambdaBuffers.Compiler.KindCheck.Inference
    LambdaBuffers.Compiler.KindCheck.Kind
    LambdaBuffers.Compiler.KindCheck.Type
    LambdaBuffers.Compiler.LamTy
    LambdaBuffers.Compiler.LamTy.Eval
    LambdaBuffers.Compiler.LamTy.Pretty
    LambdaBuffers.Compiler.LamTy.Types
    LambdaBuffers.Compiler.MiniLog
    LambdaBuffers.Compiler.MiniLog.Pretty
    LambdaBuffers.Compiler.MiniLog.UniFdSolver
    LambdaBuffers.Compiler.NamingCheck
    LambdaBuffers.Compiler.TypeClassCheck
    LambdaBuffers.Compiler.TypeClassCheck.Errors
    LambdaBuffers.Compiler.TypeClassCheck.MiniLog
    LambdaBuffers.Compiler.TypeClassCheck.RuleSet
    LambdaBuffers.Compiler.TypeClassCheck.SuperclassCycleCheck
    LambdaBuffers.ProtoCompat
    LambdaBuffers.ProtoCompat.Indexing
    LambdaBuffers.ProtoCompat.InfoLess
    LambdaBuffers.ProtoCompat.IsCompat
    LambdaBuffers.ProtoCompat.IsCompat.Codegen
    LambdaBuffers.ProtoCompat.IsCompat.Compiler
    LambdaBuffers.ProtoCompat.IsCompat.FromProto
    LambdaBuffers.ProtoCompat.IsCompat.Lang
    LambdaBuffers.ProtoCompat.IsCompat.Utils
    LambdaBuffers.ProtoCompat.Types
    LambdaBuffers.ProtoCompat.Types.Codegen
    LambdaBuffers.ProtoCompat.Types.Compiler
    LambdaBuffers.ProtoCompat.Types.Lang
    LambdaBuffers.ProtoCompat.Types.Qualified
    LambdaBuffers.ProtoCompat.Utils

  hs-source-dirs:  src

executable lbc
  import:         common-language
  main-is:        Main.hs
  build-depends:
    , base                        >=4.16
    , bytestring
    , lambda-buffers-compiler
    , lambda-buffers-compiler-pb
    , lambda-buffers-utils
    , lens
    , optparse-applicative
    , proto-lens
    , text

  hs-source-dirs: app
  other-modules:  LambdaBuffers.Compiler.Cli.Compile

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , base                        >=4.16
    , containers
    , data-default
    , filepath
    , hedgehog
    , lambda-buffers-compiler
    , lambda-buffers-compiler-pb
    , lambda-buffers-lang-pb
    , lens
    , nonempty-containers
    , ordered-containers
    , proto-lens
    , tasty
    , tasty-hedgehog
    , tasty-hunit
    , text

  other-modules:
    Paths_lambda_buffers_compiler
    Test.DeriveCheck
    Test.KindCheck
    Test.KindCheck.Errors
    Test.LambdaBuffers.Compiler
    Test.LambdaBuffers.Compiler.ClassClosure
    Test.LambdaBuffers.Compiler.Coverage
    Test.LambdaBuffers.Compiler.LamTy
    Test.LambdaBuffers.Compiler.MiniLog
    Test.LambdaBuffers.Compiler.Mutation
    Test.LambdaBuffers.Compiler.Phantoms
    Test.LambdaBuffers.Compiler.TypeClassCheck
    Test.LambdaBuffers.Compiler.Utils
    Test.LambdaBuffers.Compiler.Utils.Golden
    Test.LambdaBuffers.Compiler.WellFormed
    Test.LambdaBuffers.ProtoCompat.Utils
    Test.Utils.CompilerInput
    Test.Utils.Constructors
    Test.Utils.Module
    Test.Utils.TyDef
