cabal-version:      3.0
name:               lambda-buffers-frontend
version:            0.1.0.0
synopsis:           Lambda Buffers Frontend

-- license:

author:             MLabs LTD
maintainer:         info@mlabs.city

-- A copyright notice.
-- copyright:
-- category:

flag dev
  description: Enable non-strict compilation for development
  manual:      True

extra-source-files: resources/**/*.lbf

common common-language
  ghc-options:
    -Wall -Wcompat -fprint-explicit-foralls -fprint-explicit-kinds
    -fwarn-missing-import-lists -Weverything -Wno-unsafe
    -Wno-missing-safe-haskell-mode -Wno-implicit-prelude
    -Wno-missing-kind-signatures -Wno-all-missed-specializations

  if !flag(dev)
    ghc-options: -Werror

  default-extensions:
    NoStarIsType
    BangPatterns
    BinaryLiterals
    ConstrainedClassMethods
    ConstraintKinds
    DataKinds
    DeriveAnyClass
    DeriveDataTypeable
    DeriveFoldable
    DeriveFunctor
    DeriveGeneric
    DeriveLift
    DeriveTraversable
    DerivingStrategies
    DoAndIfThenElse
    EmptyCase
    EmptyDataDecls
    EmptyDataDeriving
    ExistentialQuantification
    ExplicitForAll
    ExplicitNamespaces
    FlexibleContexts
    FlexibleInstances
    ForeignFunctionInterface
    GADTSyntax
    HexFloatLiterals
    ImportQualifiedPost
    InstanceSigs
    KindSignatures
    LambdaCase
    MonomorphismRestriction
    MultiParamTypeClasses
    NamedFieldPuns
    NamedWildCards
    NumericUnderscores
    OverloadedStrings
    PartialTypeSignatures
    PatternGuards
    PolyKinds
    PostfixOperators
    RankNTypes
    RelaxedPolyRec
    ScopedTypeVariables
    StandaloneDeriving
    StandaloneKindSignatures
    TemplateHaskell
    TraditionalRecordSyntax
    TupleSections
    TypeApplications
    TypeFamilies
    TypeOperators
    TypeSynonymInstances
    ViewPatterns

  default-language:   Haskell2010

library
  import:          common-language
  build-depends:
    , base                     >=4.16
    , containers               >=0.6
    , directory                >=1.3
    , filepath                 >=1.4
    , lambda-buffers-compiler  >=0.1
    , mtl                      >=2.2
    , parsec                   >=3.1
    , prettyprinter            >=1.7
    , text                     >=1.2
    , transformers             >=0.5

  hs-source-dirs:  src
  exposed-modules:
    LambdaBuffers.Frontend
    LambdaBuffers.Frontend.Parsec
    LambdaBuffers.Frontend.PPrint
    LambdaBuffers.Frontend.Syntax

executable lambda-buffers-frontend-cli
  import:         common-language
  build-depends:
    , base                        >=4.16
    , containers                  >=0.6
    , lambda-buffers-compiler-pb  >=0.1
    , lambda-buffers-frontend
    , lens                        >=5.2
    , optparse-applicative        >=0.17
    , prettyprinter               >=1.7
    , text                        >=1.2

  hs-source-dirs: app
  main-is:        Main.hs
  other-modules:
    LambdaBuffers.Frontend.Cli.Compile
    LambdaBuffers.Frontend.Cli.Format

test-suite tests
  import:         common-language
  type:           exitcode-stdio-1.0
  hs-source-dirs: test
  main-is:        Test.hs
  build-depends:
    , base                     >=4.16
    , containers               >=0.6
    , filepath                 >=1.4
    , lambda-buffers-frontend
    , prettyprinter            >=1.7
    , tasty                    >=1.4
    , tasty-hunit              >=0.10

  other-modules:  Test.LambdaBuffers.Frontend
